--- a/src/Auth/auth.css
+++ b/src/Auth/auth.css
@@ -12,3 +12,9 @@ footer {
   width: 960px;
   margin: 0 auto;
 }
+.logOut {
+  background-color: black;
+  color: white;
+  position: relative;
+  left: 1370px;
+}
