--- a/src/PlayersComponent/player.css
+++ b/src/PlayersComponent/player.css
@@ -2,7 +2,6 @@
   width: 960px;
   height: 300px;
   background-color: rgb(255, 255, 255);
-  border: 2px solid black;
   position: relative;
   bottom: 240px;
   margin: 0 auto;
@@ -11,4 +10,48 @@
 .typeAhead {
   position: relative;
   top: 0px;
+}
+.photo {
+  width: 240px;
+  height: 350px;
+  background-color: rgb(177, 177, 177);
+  border-radius: 20px;
+  float: left;
+  margin-right: 30px;
+}
+.inputPhoto {
+  width: 200px;
+  height: 140px;
+  border: 6px dotted gray;
+  margin-left: 20px;
+  margin-top: 50px;
+}
+.inputPhoto:file-selector-button {
+  border: none;
+  background-color: rgb(177, 177, 177);
+  color: red;
+}
+.icon {
+  background-color: grey;
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
+  margin-left: 78px;
+  margin-top: 30px;
+}
+.name {
+  font-weight: bold;
+  font-size: 25px;
+}
+.LastNmae {
+  font-weight: bold;
+  font-size: 25px;
+}
+.team {
+  font-weight: bold;
+  font-size: 25px;
+}
+.position {
+  font-weight: bold;
+  font-size: 25px;
 }
